--- a/example/sound-waves/package.json
+++ b/example/sound-waves/package.json
@@ -13,8 +13,7 @@
     "expo": "~52.0.20",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-simple-shake": "file:../.."
+    "react-native": "0.76.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
